tests/this/this.exp
Error: This.js:29
 29:   return this.x
              ^^^^^^ string. This type is incompatible with the expected return type of
 28: function f1() : number {
                     ^^^^^^ number

Error: This.js:29
 29:   return this.x
                   ^ property `x`. Property not found in
 29:   return this.x
              ^^^^ global object

Error: This.js:33
 33: var f1_2 : string = f1.bind({x: 0})();   // error, number -> string
                         ^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 33: var f1_2 : string = f1.bind({x: 0})();   // error, number -> string
                ^^^^^^ string

Error: This.js:41
 41:   return this.x
                   ^ property `x`. Property not found in
 41:   return this.x
              ^^^^ global object

Error: This.js:48
 48:     var a2 = () => { return this.x };
                                      ^ property `x`. Property not found in
 48:     var a2 = () => { return this.x };
                                 ^^^^ global object

Error: This.js:49
 49:     return a2()
                ^^^^ string. This type is incompatible with the expected return type of
 47: function f2() : number {
                     ^^^^^^ number

Error: This.js:53
 53: var f2_2 : string = f2.bind({x: 0})();   // error, number -> string
                         ^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 53: var f2_2 : string = f2.bind({x: 0})();   // error, number -> string
                ^^^^^^ string

Error: This.js:58
 58: (this: void);
      ^^^^ Cannot cast `this` to undefined because global object [1] is incompatible with undefined [2].
  References:
   58: (this: void);
        ^^^^ [1]: global object
   58: (this: void);
              ^^^^ [2]: undefined

Error: arrows.js:16
 16: (j: D); // error, since return type of bar is C, not the type of `this`
      ^ Cannot cast `j` to `D` because `C` [1] is incompatible with `D` [2].
  References:
    1: class C {
             ^ [1]: `C`
   16: (j: D); // error, since return type of bar is C, not the type of `this`
           ^ [2]: `D`

Error: arrows.js:24
 24:       super.foo(""); // find super method, error due to incorrect arg
                     ^^ string. This type is incompatible with the expected param type of
 19:   foo(x: number) { }
              ^^^^^^ number


Found 10 errors
